# risc-v-sim

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  FUNCTIONS.md  LICENSE  MVP.md  README.md  rustfmt.toml
.github/workflows/: ci.yaml  doc.yaml  image-health.yaml  integration.yaml
docs/: FUNCTIONS.md  MVP.md
riscv-samples/: Makefile  README.MD  make_gdb_cmds.sh
riscv-samples/src/: all_mem.s  auipc.s  basic.s  basic2.s  basic_mem.s  calls.s  cpy_arbitrary.s  ebreak.s  elf_section.s  fin_loops_1.s  fin_loops_2.s  fin_loops_3.s  fin_loops_4.s  fin_loops_5.s  jumps.s  jumps_hard.s  load_constant.s  loop.s  shifts.s  shifts_nonimm.s  write_and_fail.s  xoriadd.s
src/: lib.rs  main.rs  util.rs
src/decoder/: mod.rs
src/instruction/: mod.rs
src/kernel/: decoder.rs  error.rs  instr_code_print.rs  instruction.rs  memory.rs  mod.rs  processor.rs  registers.rs
src/processor/: mod.rs
src/shell/: kernel_def.rs  mod.rs
tests/: basic_mount.rs  ebreak.rs  vs_gdb.rs  vs_qemu_traces.rs  write_segments_on_err.rs
tests/common/: mod.rs
tests/samples/: all_mem.s  basic2.s  calls.s  capture_trace.sh  fin_loops_1.s  fin_loops_2.s  fin_loops_3.s  fin_loops_4.s  fin_loops_5.s  jumps.s  jumps_hard.s  load_constant.s  loop.s  shifts_nonimm.s  xoriadd.s
