[package]
name = "risc-v-sim"
version = "0.0.1"
edition = "2024"

[dependencies]
thiserror = "1.0.65"
elf = "0.8.0"
clap_derive = "4.5.41"
clap = { version = "4.5.41", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[dev-dependencies]
rand = "0.9.2"